Added sample scenarios code. Modified sample1,sample2,sample7,sampple8,sample9